--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link href= "https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+        <title>Cat</title>
+    
+    </head>
+    <body>
+
+    </body>
+</html>
+
